--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,31 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:padding="16dp"
     android:background="@drawable/card_background"
     android:elevation="4dp">
 
     <TextView
-        android:id="@+id/plan_title"
+        android:id="@+id/task_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Plan Title"
+        android:text="Task Title"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/plan_description"
+        android:id="@+id/task_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/plan_title"
+        android:layout_below="@id/task_title"
         android:layout_marginTop="8dp"
-        android:text="Plan Description"
+        android:text="Task Description"
         android:textSize="16sp" />
 
+    <TextView
+        android:id="@+id/task_deadline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/task_description"
+        android:layout_marginTop="8dp"
+        android:text="Deadline"
+        android:textSize="14sp" />
+
     <ImageView
-        android:id="@+id/plan_options"
+        android:id="@+id/task_options"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentTop="true"
